@@ -1,7 +1,9 @@
 2007-08-15  Eric Hodel  <drbrain@segment7.net>
 
-	* lib/rubygems/installer.rb: Support buliding mkrf extensions.  Fixes
+	* lib/rubygems/installer.rb: Support building mkrf extensions.  Fixes
 	bug #11313.  Patch by Jeremy Hinegardner.
+	* lib/rubygems/installer.rb: Ensure bin files are executable.  Fixes
+	bug #8985 submitted by Ara Howard.
 
 2007-08-13  Eric Hodel  <drbrain@segment7.net>
 
